--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     </div> 
     <nav> 
      <ul> 
-	  <li> <a target="_blank" href="https://www.restia.love/nav/">导航</a></li>
-      <li> <a target="_blank" href="https://www.restia.love/blog/">博客</a></li>
+	  <li> <a target="_blank" href="https://nav.restia.love/">导航</a></li>
+      <li> <a target="_blank" href="https://blog.restia.love/">博客</a></li>
       <li> <a target="_blank" href="https://al.chirmyram.com/">云盘</a></li>
 	  <li> <a target="_blank" href="https://google.jitsu.top/">谷歌</a></li>
       <!--<li><a href="#elements">Elements</a></li>--> 
